--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="logo-container">
-            <a href="index.html" class="logo">
-                <span class="logo-text">Все</span>
-                <span class="logo-subtext">инструменты</span>
-                <span class="logo-icon">.ru</span>
-            </a>
-        </div>
+        <div class="logo">3D Printing</div>
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Главная</a></li>
@@ -35,7 +29,7 @@
                 Мы молодая и амбициозная компания, специализирующаяся на продаже 3D-принтеров и сопутствующих материалов. Наша миссия — сделать технологию 3D-печати доступной для всех: от энтузиастов и любителей до профессионалов и крупных производственных компаний.</p>
             <div class="buttons">
                 <a href="3D Printer.html">
-                    <button class="buy-now">Buy Now</button>
+                    <button class="buy-now">Купить</button>
                 </a>
             </div>
         </div>
