--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 <body>
     <header>
-        <div class="logo">3D Printing</div>
+        <div class="logo-container">
+            <a href="index.html" class="logo">
+                <span class="logo-text">Все</span>
+                <span class="logo-subtext">инструменты</span>
+                <span class="logo-icon">.ru</span>
+            </a>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Главная</a></li>
